src/main/java/com/example/sos/employee/error/NotFoundEmployeeError.java
package com.example.sos.employee.error;

public class NotFoundEmployeeError extends RuntimeException{}